update app user
